ingress/default-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/proxy-body-size: "1024M"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kibana.dev.fanbuy
    http:
      paths:
      - backend:
          serviceName: kb-single-svc
          servicePort: 5601
        path: /
