ingress/fanbuy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanbuy-ingress
  namespace: dev
  annotations:
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/proxy-body-size: "1024M"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.dev.fanbuy
    http:
      paths:
      - backend:
          serviceName: dev-fanbuy-server-gateway
          servicePort: 8080
        path: /
